added pit mutation plugin

--- a/pom.xml
+++ b/pom.xml
@@ -31,4 +31,13 @@
         <developerConnection>scm:git:git@github.com:FitburIO/test.git</developerConnection>
     </scm>
     
+     <build>
+        <plugins>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+    
 </project>
