--- a/test-hk2/pom.xml
+++ b/test-hk2/pom.xml
@@ -35,5 +35,10 @@
             <artifactId>hk2-testng</artifactId>
             <version>${hk2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.hk2</groupId>
+            <artifactId>hk2-mockito</artifactId>
+            <version>${hk2.version}</version>
+        </dependency>
     </dependencies>
 </project>
